@@ -1,3 +1,11 @@
+blueman (1.20-1)
+
+ * New upstream release
+ * Now depend on polkit-gnome.
+ * Explicitly enable HAL as Arch has NM 0.7.1
+
+ -- Abhishek Dasgupta <abhidg@gmail.com> Mon, 19 Oct 2009 13:31:41 +0000
+
 blueman (1.10-2)
 
  * Remove bluetooth-sendto symlink, closes FS#16619.
